# rust-show-gamepad

./: Cargo.toml  LICENSE  README.md  build.rs  config.yaml
resources/: res.lib
src/: config.rs  error.rs  font.rs  joysticks.rs  main.rs  mapping.rs  options.rs  visualizer.rs
