[package]
name = "show-gamepad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.9"
structopt = "0.3"

[dependencies.serde]
version = "1.0"
default-features = false
features = [ "derive" ]

[dependencies.sdl2]
version = "0.36"
default-features = false
features = [ "image" ]
